--- a/src/style/imageItem.css
+++ b/src/style/imageItem.css
@@ -1,10 +1,14 @@
 .imageItem {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 30px;
   transition: 0.25s all ease-in-out;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .imageItem:hover {
-  scale: 1.1;
+  scale: 1.05;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
